move fieldwork tab one further left

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,10 @@
   link: /research.html
 - name: ML4Cryo
   link: /ml4cryo.html
+- name: Fieldwork
+  link: /fieldwork.html
 - name: Volunteering
   link: /volunteering.html
-- name: Mountaineering
-  link: /mountaineering.html
 - name: CV
   link: /cv.html
 - name: News
