add small snowflake as icon for browser tabs

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_username:  liellnima
 description: Julia Kaltenborn is a PhD student at McGill University & Mila - Quebec AI Institute under the supervision of Prof. David Rolnick. She uses ML for climate modeling and cryospheric sciences. She loves snow and ice and wants to protect the polar regions of our Earth.
 author: Julia Kaltenborn
 url: https://juliakaltenborn.github.io
-logo: /assets/images/icon.png
+logo: /assets/images/favicon.png
 
 # Reading Files
 include:
